--- a/formulario.html
+++ b/formulario.html
@@ -1,19 +1,85 @@
-<form>
-    <label for="dni">DNI:</label><br>
-    <input type="text" id="dni" name="dni" maxlength="9"><br>
-    <label for="nombreapellidos">Nombre y apellidos:</label><br>
-    <input type="text" id="nombreapellidos" name="nombreapellidos" maxlength="100"><br>
-    <label for="contraseña">Contraseña:</label><br>
-    <input type="text" id="contraseña" name="contraseña" minlength="5" maxlength="10"><br>
-    <label for="email">Email:</label><br>
-    <input type="text" id="email" name="email"><br>
-    <label for="fecha">Fecha del entrenamiento:</label><br>
-    <input type="text" id="fecha" name="fecha"><br>
-    <label for="valoracion">Valoración del nivel de esfuerzo:</label><br>
-    <input type="text" id="valoracion" name="valoracion"><br>
-    <label for="tipo">Tipo de entrenamiento:</label><br>
-    <input type="text" id="tipo" name="tipo"><br>
-    <label for="contraseña">Salas utilizadas:</label><br>
-    <input type="text" id="contraseña" name="contraseña"><br>
-    <input type="submit" value="Enviar">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <title>Formulario de Entrenamiento</title>
+</head>
+<body>
+
+<h1>Registro de Entreno</h1>
+
+<form action="http://ordenadordelprofesor/imw/recibe_formulario.php" method="POST" enctype="multipart/form-data">
+    <input type="hidden" id="campoOculto" name="campoOculto" value="José Alejandro y Dimas">
+    <table>
+        <tr>
+            <td align="right"><label for="dni">DNI(*)</label></td>
+            <td><input type="text" id="dni" name="dni" maxlength="9" required></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="nombre_apellidos">Nombre y Apellidos(*)</label></td>
+            <td><input type="text" id="nombre_apellidos" name="nombre_apellidos" maxlength="100" required></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="contrasena">Contraseña(*)</label></td>
+            <td><input type="password" id="contrasena" name="contrasena" minlength="5" maxlength="10" required></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="telefono">Teléfono</label></td>
+            <td><input type="tel" id="telefono" name="telefono" pattern="[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{2}"></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="email">Email(*)</label></td>
+            <td><input type="email" id="email" name="email" required pattern="^[a-zA-Z0-9_.+-]+@gmail\.com$"></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="fecha_entrenamo">Fecha del Entrenamiento(*)</label></td>
+            <td><input type="date" id="fecha_entreno" name="fecha_entreno" max="2023-12-31" required></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="imagenes">Imágenes del Entrenamiento</label></td>
+            <td><input type="file" id="imagenes" name="imagenes[]" accept="image/jpg" multiple></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="rutina">Rutina de Ejercicios</label></td>
+            <td><input type="file" id="rutina" name="rutina" accept=".pdf"></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="agua_consumida">Cantidad de Agua Consumida</label></td>
+            <td><input type="number" id="agua_consumida" name="agua_consumida" value="0.5" step="0.1"></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="esfuerzo">Valoración del Nivel de Esfuerzo(*)</label></td>
+            <td><input type="range" id="esfuerzo" name="esfuerzo" min="1" max="10" required></td>
+        </tr>
+        <tr>
+            <td align="right"><label for="tipo_entrenamiento">Tipo de Entrenamiento(*)</label></td>
+            <td>
+                <select id="tipo_entrenamiento" name="tipo_entrenamiento" required>
+                    <option value="aerobico">Aeróbico</option>
+                    <option value="anaerobico">Anaeróbico</option>
+                </select>
+            </td>
+        </tr>
+        <tr>
+            <td align="right"><label for="salas_utilizadas">Salas Utilizadas(*)</label></td>
+            <td>
+                <select id="salas_utilizadas" name="salas_utilizadas[]" multiple required>
+                    <option value="exterior">Pista Exterior</option>
+                    <option value="piscina">Piscina</option>
+                    <option value="musculacion">Sala de Musculación</option>
+                    <option value="spinning">Sala de Spinning</option>
+                    <option value="polivalente">Sala Polivalente</option>
+                    <option value="cardio">Zona Cardio</option>
+                </select>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2" align="center">
+                <button type="reset">Eliminar Valores</button>
+                <button type="submit">Enviar Formulario</button>
+            </td>
+        </tr>
+    </table>
 </form>
+
+</body>
+</html>
